[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/background.png" type="Texture" id=1]
[ext_resource path="res://NEAT_usability/fonts/Data/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/variables.gd" type="Script" id=3]
[ext_resource path="res://assets/tiles/maintileset.tres" type="TileSet" id=4]
[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-regular.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="WELCOME" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -441.643
margin_top = -244.966
margin_right = 1478.36
margin_bottom = 835.034
texture = ExtResource( 1 )

[node name="repeat" type="CheckButton" parent="."]
margin_left = 359.0
margin_top = 17.0
margin_right = 550.0
margin_bottom = 83.0
hint_tooltip = "it will automatically restart same level when you die. press M to come back for menu"
custom_fonts/font = SubResource( 1 )
pressed = true
button_mask = 3
text = "REPEAT"

[node name="vsai" type="CheckButton" parent="."]
margin_left = 360.189
margin_top = 82.2616
margin_right = 551.188
margin_bottom = 148.262
custom_fonts/font = SubResource( 1 )
pressed = true
text = "P Vs AI"

[node name="playb" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 361.354
margin_top = 295.672
margin_right = 504.354
margin_bottom = 350.672
rect_scale = Vector2( 1.32, 1.24 )
custom_fonts/font = ExtResource( 6 )
text = "PLAY ALONE"

[node name="warning" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 478.0
margin_right = 1028.0
margin_bottom = 602.0
custom_fonts/normal_font = ExtResource( 6 )
text = "README:
Click on all this buttons.
Turn on Repeat button, it will start same level again if you die or AI wins.
Before playing against AI i would suggest to Play normally first to understand the level but if you want real fun then play directly against AI.
shortcut for main menu: M
shortcut for restart & play : Enter (2x)"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 360.354
margin_top = 163.672
margin_right = 548.354
margin_bottom = 207.672
custom_fonts/font = ExtResource( 6 )
text = "level1"
items = [ "level1", null, false, 0, null, "level2", null, false, 1, null, "level3", null, false, 2, null, "testlv", null, false, 3, null, "level4", null, false, 4, null, "level5", null, false, 5, null ]
selected = 0

[node name="multiplayer" type="Button" parent="."]
margin_left = 360.354
margin_top = 371.672
margin_right = 549.354
margin_bottom = 431.672
custom_fonts/font = ExtResource( 6 )
text = "GO MULTIPLAYER"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 361.354
margin_top = 237.672
margin_right = 548.354
margin_bottom = 261.672
align = 1
placeholder_text = "Your Unholy Name"

[node name="music" type="CheckButton" parent="."]
margin_left = 893.0
margin_top = 14.0
margin_right = 1015.0
margin_bottom = 67.0
pressed = true
text = "MUSIC"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 65533, 0, 0, 3, 8, 0, 4, -1610612728, 0, 9, 8, 0, 10, -1610612728, 0, 16, 0, 0, 131069, 0, 0, 65539, 1610612743, 0, 65540, 1610612742, 0, 65545, -1073741818, 0, 65546, 1610612743, 0, 65552, 0, 0, 196605, 0, 0, 131075, 1610612743, 0, 131082, 1610612743, 0, 131088, 0, 0, 262141, 0, 0, 196611, 1610612743, 0, 196618, 1610612743, 0, 196624, 0, 0, 327677, 0, 0, 262147, 1610612743, 0, 262154, 1610612743, 0, 262160, 0, 0, 393213, 0, 0, 327683, 1610612743, 0, 327684, -1610612730, 0, 327689, 6, 0, 327690, 1610612743, 0, 327696, 0, 0, 458749, 0, 0, 393219, -1073741816, 0, 393220, 1610612744, 0, 393225, -1073741816, 0, 393226, 1610612744, 0, 393232, 0, 0, 524285, 0, 0, 458768, 0, 0, 589821, 0, 0, 524304, 0, 0, 655357, 0, 0, 589840, 0, 0, 720893, 0, 0, 655376, 7, 0, 786429, 0, 0, 720912, 7, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 7, 0, 786433, 7, 0, 786434, 7, 0, 786435, 7, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0 )

[connection signal="toggled" from="repeat" to="." method="_on_repeat_toggled"]
[connection signal="toggled" from="vsai" to="." method="_on_vsai_toggled"]
[connection signal="pressed" from="playb" to="." method="_on_playb_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="toggled" from="music" to="." method="_on_music_toggled"]
